ai-gauth/03-quota.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: global-token-quota
  namespace: ai
spec:
  plugin:
    ai-quota:
      store:
        redis:
          endpoints:
            - redis-stack-server.redis-stack.svc.cluster.local:6379
      outputTokenLimit:
        limit: 10000
        period: 24h
      sourceCriterion:
        requestHost: true
      onDenyResponse:
        statusCode: 429
        message: '{"Error":"global quota reached"}'
        contentType: "application/json"
