ai-gauth/04-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bedrock-parent
  namespace: ai
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bapi.${CLUSTERNAME}.${DOMAINNAME}`)
      middlewares:
        - name: jwt
        - name: messagesapi-bedrock
        - name: global-token-quota
        - name: content-guard-regex
        - name: llmguard
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bedrock-child-haiku
  namespace: ai
spec:
  parentRefs:
    - name: bedrock-parent
  routes:
    - kind: Rule
      match: Host(`bapi.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/anthropic`) && Model(`anthropic.claude-haiku-4-5`)
      services:
        - name: bedrock-svc
          kind: Service
          port: 443
          passHostHeader: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bedrock-child-opus
  namespace: ai
spec:
  parentRefs:
    - name: bedrock-parent
  routes:
    - kind: Rule
      match: Host(`bapi.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/anthropic`) && Model(`anthropic.claude-opus-4-7`)
      services:
        - name: bedrock-svc
          kind: Service
          port: 443
          passHostHeader: false
